# BrewMaster

./: .clang-format  .clang_complete  CMakeLists.txt  README.md
apps/examples/brewery/: Kconfig  Make.defs  Makefile  brewery_main.c
apps/examples/buttons_test/: Kconfig  Make.defs  Makefile  buttons_test_main.c
apps/examples/buzzer_test/: Kconfig  Make.defs  Makefile  buzzer_test_main.c
cmake/: clang_complete.in  clang_complete_c.in
cmsis/src/: startup_stm32f10x_xl.s.save  system_stm32f10x.c
inc/apps/bender/: bender.hpp
inc/apps/brewery/: brewery.hpp  btree.hpp  menu.hpp  pid.hpp
inc/apps/clear/: clear.hpp
inc/apps/cowsay/: cowsay.hpp
inc/apps/debug/: debug.hpp
inc/apps/modbus/: modbus.hpp
inc/apps/reboot/: reboot.hpp
inc/apps/shell/: shell.hpp  vt100.hpp
inc/arch/: mcu_tags.hpp
inc/argparse/: argparse.h
inc/boards/: board_tags.hpp
inc/drivers/: 74hc595_driver.hpp  ac_load_driver.hpp  ads1118_driver.hpp  button_driver.hpp  buzzer_driver.hpp  driver.hpp  driver_model.hpp  gpio_driver.hpp  hd44780_driver.hpp  leds_driver.hpp  modbus_driver.hpp  rcc_driver.hpp  relay_load_driver.hpp  rtc_driver.hpp  spi_driver.hpp  timer_driver.hpp  ui_driver.hpp  uln2003_driver.hpp  usart_driver.hpp  vfd_driver.hpp  w25qxx_driver.hpp  zsp3806g2e_driver.hpp
inc/drivers/io/: 74hc595_ioctl.hpp  ac_load_ioctl.hpp  ads1118_ioctl.hpp  button_event.hpp  button_ioctl.hpp  buzzer_ioctl.hpp  gpio_event.hpp  gpio_ioctl.hpp  hd44780_ioctl.hpp  leds_ioctl.hpp  modbus_ioctl.hpp  rcc_ioctl.hpp  relay_load_ioctl.hpp  rtc_ioctl.hpp  spi_event.hpp  spi_ioctl.hpp  timer_ioctl.hpp  ui_ioctl.hpp  uln2003_ioctl.hpp  usart_ioctl.hpp  vfd_ioctl.hpp  w25qxx_ioctl.hpp  zsp3806g2e_ioctl.hpp
inc/fio/: unistd.hpp
inc/init/: init_rcc.hpp
inc/json/: json.h
inc/lfs/: .clang_complete  lfs.h  lfs_util.h
inc/sys/: events_worker.hpp  system.hpp
inc/tasks/: events_worker.hpp  init_task.hpp
inc/util/fn/: fn.hpp  fn_obj.hpp  fn_tr.hpp  fn_tr_help.hpp  mem_fn.hpp
inc/util/fonts/: unicode_5x8.hpp
inc/util/hash/: fnv1a.hpp  intmem.hpp  sha256.hpp  sha256_literal.hpp
inc/util/string/: constexpr_string.hpp
inc/util/tuple/: tuple.hpp
inc/vfs/: file.hpp  vnode.hpp
ldscripts/: mem.ld
nuttx/: .version
nuttx/boards/arm/stm32/brewery-board/: Kconfig
nuttx/boards/arm/stm32/brewery-board/configs/nsh/: defconfig
nuttx/boards/arm/stm32/brewery-board/include/: buttons_ioctl.h
nuttx/boards/arm/stm32/brewery-board/scripts/: ld.script
nuttx/boards/arm/stm32/brewery-board/src/: Make.defs  custom_buttons_driver.c  custom_leds_driver.c  stm32_bringup.c  stm32f103_minimum.h
rtos/inc/: FreeRTOSConfig.h  portmacro.h
script/: A.xbm  gen_cyrillic_font.py  {а-я}.xbm  {а..я}.xbm  А.xbm  Б.xbm
spl/inc/: stm32f10x_conf.h
spl/src/: misc.c  stm32f10x_adc.c  stm32f10x_bkp.c  stm32f10x_can.c  stm32f10x_cec.c  stm32f10x_crc.c  stm32f10x_dac.c  stm32f10x_dbgmcu.c  stm32f10x_dma.c  stm32f10x_exti.c  stm32f10x_flash.c  stm32f10x_fsmc.c  stm32f10x_gpio.c  stm32f10x_i2c.c  stm32f10x_iwdg.c  stm32f10x_pwr.c  stm32f10x_rcc.c  stm32f10x_rtc.c  stm32f10x_sdio.c  stm32f10x_spi.c  stm32f10x_tim.c  stm32f10x_usart.c  stm32f10x_wwdg.c
src/: assert.c  events_worker.cpp  events_worker_task.cpp  init_task.cpp  lfs.cpp  main.cpp
src/apps/bender/: bender.cpp
src/apps/brewery/: brewery.cpp  pid.cpp
src/apps/clear/: clear.cpp
src/apps/cowsay/: cowsay.cpp
src/apps/debug/: debug.cpp
src/apps/modbus/: modbus.cpp
src/apps/reboot/: reboot.cpp
src/apps/shell/: shell.cpp
src/argparse/: argparse.c
src/boards/bender_controller/: 74hc595_driver.cpp  buttons_driver.cpp  buzzer_driver.cpp  gpio_driver.cpp  leds_driver.cpp  modbus_driver.cpp  rcc_driver.cpp  relay_load_driver.cpp  rtc_driver.cpp  spi_driver.cpp  startup.cpp  timer_driver.cpp  ui_driver.cpp  uln2003_driver.cpp  usart_driver.cpp  vfd_driver.cpp  zsp3806g2e_driver.cpp
src/boards/brewery_controller/: ac_load_driver.cpp  ads1118_driver.cpp  buttons_driver.cpp  buzzer_driver.cpp  hd44780_driver.cpp  leds_driver.cpp  rcc_driver.cpp  startup.cpp  tc_type_k_lookup_table.cpp  thermistor_ntc_lookup_table.cpp  timer_driver.cpp  usart_driver.cpp  w25qxx_driver.cpp
src/fio/: fio.cpp
src/fonts/: unicode_5x8.cpp
src/hash/: sha256.cpp
src/json/: .clang_complete  json.c
src/lfs/: .clang_complete  lfs.c
src/rtos/: rtos_hooks.c
tools/kconfig-frontends/: Makefile.in  aclocal.m4  configure~
tools/kconfig-frontends/autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
